add featured work titles and urls

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
           <h2>Featured Work</h2>
           <figure class="work">
             <img src="images/abstract-q-c-1200-800-8.jpg" alt="project 1">
-            <figcaption>Example 1</figcaption>
-            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/</a>
+            <figcaption>Movie Poster Gallery</figcaption>
+            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/movie-poster-blog/</a>
           </figure>
           <figure class="work">
             <img src="images/abstract-q-c-1200-800-7.jpg" alt="project 2">
-            <figcaption>Example 2</figcaption>
-            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/</a>
+            <figcaption>Interactive Resume</figcaption>
+            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/interactive-resume/</a>
           </figure>
           <figure class="work">
             <img src="images/abstract-q-c-1200-800-2.jpg" alt="project 3">
-            <figcaption>Example 3</figcaption>
-            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/</a>
+            <figcaption>Arcade Game</figcaption>
+            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/arcade-game/</a>
           </figure>
         </section>
       </article>
