--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
       <div class="header__inner">
-        <img class="header__logo" src="data:image/svg+xml;charset=utf-8,<svg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20width%3D'500'%20height%3D'500'><rect%20width%3D'100%25'%20height%3D'100%25'%20fill%3D'crimson'%2F><text%20x%3D'250'%20y%3D'255'%20font-size%3D'20'%20font%3D'Verdana%2C%20sans-serif'%20fill%3D'white'%20text-anchor%3D'middle'>500%20x%20500<%2Ftext><%2Fsvg>">
+        <img class="header__logo" src="images/logo.svg" alt="logo">
         <h1>Karol Zyskowski</h1>
         <h4>Front-End Ninja</h4>
       </div>
