--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio Site</title>
+    <base target="_blank">
     <link rel="icon" sizes="192x192" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
@@ -46,7 +48,13 @@
         </section>
       </article>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <ul>
+          <li><a class="zocial-email" target="_self" href="mailto:k.zysk@zoho.com"></a></li>
+          <li><a class="zocial-github" href="https://github.com/karoldavid?tab=repositories"></a></li>
+          <li><a class="zocial-twitter" href="https://twitter.com/karoldawid"></a></li>
+        </ul>
+      </footer>
     </main>
 
   </body>
