add titles to a links; rm arcade game project; add responsive website sfuelscher

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         <section class="featured-work">
           <h2>Featured Work</h2>
           <figure class="work">
-            <img src="images/abstract-q-c-1200-800-8.jpg" alt="project 1">
+            <a href="http://karoldavid.github.io/movie-poster-blog" title="Movie Poster Gallery"><img src="images/abstract-q-c-1200-800-8.jpg" alt="Project 1"></a>
             <figcaption>Movie Poster Gallery</figcaption>
-            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/movie-poster-blog/</a>
+            <a href="http://karoldavid.github.io/movie-poster-blog" title="Movie Poster Gallery">http://karoldavid.github.io/movie-poster-blog/</a>
           </figure>
           <figure class="work">
-            <img src="images/abstract-q-c-1200-800-7.jpg" alt="project 2">
+            <a href="http://www.susanne-fuelscher.de/" title="Responsive Website"><img src="images/abstract-q-c-1200-800-7.jpg" alt="Project 2"></a>
+            <figcaption>Responsive Website</figcaption>
+            <a href="http://www.susanne-fuelscher.de/" title="Responsive Website">http://www.susanne-fuelscher.de/</a>
+          </figure>
+          <figure class="work">
+            <a href="http://karoldavid.github.io/interactive-resume/" title="Interactive Resume"><img src="images/abstract-q-c-1200-800-2.jpg" alt="Project 2"></a>
             <figcaption>Interactive Resume</figcaption>
-            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/interactive-resume/</a>
-          </figure>
-          <figure class="work">
-            <img src="images/abstract-q-c-1200-800-2.jpg" alt="project 3">
-            <figcaption>Arcade Game</figcaption>
-            <a href="http://karoldavid.github.io/">http://karoldavid.github.io/arcade-game/</a>
+            <a href="http://karoldavid.github.io/interactive-resume/" title="Interactive Resume">http://karoldavid.github.io/interactive-resume/</a>
           </figure>
         </section>
       </article>
 
       <footer class="footer">
         <ul>
-          <li><a class="zocial-email" target="_self" href="mailto:k.zysk@zoho.com"></a></li>
-          <li><a class="zocial-github" href="https://github.com/karoldavid?tab=repositories"></a></li>
-          <li><a class="zocial-twitter" href="https://twitter.com/karoldawid"></a></li>
+          <li><a class="zocial-email" target="_self" href="mailto:k.zysk@zoho.com" title="email"></a></li>
+          <li><a class="zocial-github" href="https://github.com/karoldavid?tab=repositories" title="github"></a></li>
+          <li><a class="zocial-twitter" href="https://twitter.com/karoldawid" title="twitter"></a></li>
         </ul>
       </footer>
     </main>
