change movie poster gallery url

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header__inner">
         <img id="logo" src="images/logo.svg" alt="logo">
         <h1>Karol Zyskowski</h1>
-        <h4>Front-End Ninja</h4>
+        <h4>Front-End Webdeveloper</h4>
       </div>
     </header>
 
@@ -34,15 +34,15 @@
         <section class="featured-work">
           <h2>Featured Work</h2>
           <figure class="work">
-            <a href="http://karoldavid.github.io/movie-poster-blog" title="Movie Poster Gallery">
+            <a href="http://karoldavid.github.io/neighborhood-map/" title="Interactive Map">
               <picture>
                 <source media="(min-width:750px)" srcset="images/abstract1-1600_large_2x.jpg 2x, images/abstract1-800_large_1x.jpg">
                 <source media="(min-width:500px)" srcset="images/abstract1-1000_medium_2x.jpg 2x, images/abstract1-500_medium_1x.jpg">
                 <img src="images/abstract1.jpg" alt="Project 1">
               </picture>
             </a>
-            <figcaption>Movie Poster Gallery</figcaption>
-            <a href="http://karoldavid.github.io/movie-poster-blog" title="Movie Poster Gallery">http://karoldavid.github.io/movie-poster-blog/</a>
+            <figcaption>Interactive Map</figcaption>
+            <a href="http://karoldavid.github.io/neighborhood-map/" title="Movie Poster Gallery">http://karoldavid.github.io/neighborhood-map//</a>
           </figure>
           <figure class="work">
             <a href="http://www.susanne-fuelscher.de/" title="Responsive Website">
@@ -67,12 +67,47 @@
             <a href="http://karoldavid.github.io/interactive-resume/" title="Interactive Resume">http://karoldavid.github.io/interactive-resume/</a>
           </figure>
         </section>
+        <section class="featured-work">
+          <figure class="work">
+            <a href="http://karoldavid.github.io/movie-poster-blog" title="Movie Poster Gallery">
+              <picture>
+                <source media="(min-width:750px)" srcset="images/abstract1-1600_large_2x.jpg 2x, images/abstract1-800_large_1x.jpg">
+                <source media="(min-width:500px)" srcset="images/abstract1-1000_medium_2x.jpg 2x, images/abstract1-500_medium_1x.jpg">
+                <img src="images/abstract1.jpg" alt="Project 4">
+              </picture>
+            </a>
+            <figcaption>Movie Poster Gallery</figcaption>
+            <a href="http://karoldavid.github.io/movie-poster-blog" title="Movie Poster Gallery">http://karoldavid.github.io/movie-poster-blog/</a>
+          </figure>
+          <figure class="work">
+            <a href="http://karoldavid.github.io/arcade-game/" title="Arcade Game Clone">
+              <picture>
+                <source media="(min-width:750px)" srcset="images/abstract2-1600_large_2x.jpg 2x, images/abstract2-800_large_1x.jpg">
+                <source media="(min-width:500px)" srcset="images/abstract2-1000_medium_2x.jpg 2x, images/abstract2-500_medium_1x.jpg">
+                <img src="images/abstract2.jpg" alt="Project 5">
+              </picture>
+            </a>
+            <figcaption>JavaScript Game</figcaption>
+            <a href="http://karoldavid.github.io/arcade-game/" title="Arcade Game Clone">http://karoldavid.github.io/arcade-game/</a>
+          </figure>
+          <figure class="work">
+            <a href="http://karoldavid.github.io/interactive-resume/" title="Interactive Resume">
+              <picture>
+                <source media="(min-width:750px)" srcset="images/abstract3-1600_large_2x.jpg 2x, images/abstract3-800_large_1x.jpg">
+                <source media="(min-width:500px)" srcset="images/abstract3-1000_medium_2x.jpg 2x, images/abstract3-500_medium_1x.jpg">
+                <img src="images/abstract3.jpg" alt="Project 6">
+              </picture>
+            </a>
+            <figcaption>Interactive Resume</figcaption>
+            <a href="http://karoldavid.github.io/interactive-resume/" title="Interactive Resume">http://karoldavid.github.io/interactive-resume/</a>
+          </figure>
+        </section>
       </article>
 
       <footer class="footer">
         <ul>
-          <li><a class="zocial-email" target="_self" href="mailto:k.zysk@zoho.com" title="email"></a></li>
-          <li><a class="zocial-github" href="https://github.com/karoldavid?tab=repositories" title="github"></a></li>
+          <li><a class="zocial-email" target="_self" href="mailto:k.zysk@zoho.com?subject=Web Development" title="email to k.zysk@zoho.com"></a></li>
+          <li><a class="zocial-github" href="https://github.com/karoldavid?tab=repositories" title="Visit me on Github"></a></li>
           <li><a class="zocial-twitter" href="https://twitter.com/karoldawid" title="twitter"></a></li>
         </ul>
       </footer>
